...
                \(gamesCountText)
                \(bestGameText)
                \(accuracyText)
                """
            
            let resultsViewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз"
            )
            
            // 3. Отдаёт контроллеру команду «покажи результат»
            viewController?.show(quiz: resultsViewModel)
...
